"ChangeLog"

2005-05-01	David Fang	<fangism@users.sourceforge.net>

	* ARTXX-00-01-04-main-00-28-merged-template-01-09:
	  Merged revisions from -template-01 branch.  
	  Summary: added front-end language support for strict+relaxed
		template parameters.  
	  	Re-worked parser and AST (and scripts), eliminating
			need for ART::parser:node.  
		TODO: implement strict and relaxed template argument checks.  
	  Will return to this branch as -template-02 in the near future.  
	  Some of the revisions of this branch just had to be merged to trunk.


2005-05-01	David Fang	<fangism@users.sourceforge.net>

	* ARTXX-00-01-04-main-00-27-template-01-04:
	  Added more latex-related conditionals to configure.in.  


2005-04-28	David Fang	<fangism@users.sourceforge.net>

	* ARTXX-00-01-04-main-00-27:
	  Updated configure.in, as recommended by autoscan.  


2005-04-18	David Fang	<fangism@users.sourceforge.net>

	* ARTXX-00-01-04-main-00-24:
	  From now on, revision details should be written to
		directories' ChangeLogs.  This ChangeLog will only contain
		high-level summaries.  (It's just been getting too cluttered.)
	  Added: dox/lang/ChangeLog, src/ChangeLog.


2005-04-14	David Fang	<fangism@users.sourceforge.net>

	* ARTXX-00-01-04-main-00-23:
	  Bring code up to speed with gcc-4 (20050409).
	  Compiles and runs cleanly with gcc-3.3 through 4.0 on
		powerpc-darwin, i686-linux, i386-freebsd.
	  Needed to respect missing virtual destructor warning with struct
		  functors in "util/operators.h".  


2005-04-14	David Fang	<fangism@users.sourceforge.net>

	* ARTXX-00-01-04-main-00-22-merged-parser-02-05:
	  Merged parser-02 branch, through revision -05.  


2005-04-11	David Fang	<fangism@users.sourceforge.net>

	* ARTXX-00-01-04-main-00-21-parser-02-05:
	  Clean-up, making USE_NEW_NODE_LIST permanent.  
	  (Removed old "AST/art_parser.tcc")


2005-04-10	David Fang	<fangism@users.sourceforge.net>

	* ARTXX-00-01-04-main-00-21-parser-02-03: