@@ -1,7 +1,7 @@
 # "configure.in"
 # Process this file with "autoconf" to generate the "configure" script.
 #
-#	$Id: configure.in,v 1.19 2005/05/04 17:54:06 fang Exp $
+#	$Id: configure.in,v 1.20 2005/05/04 19:31:38 fang Exp $
 
 # Hint: Try running "autoscan" for suggestions on what should go in here.  
 # Results of autoscan appear in "configure.scan".  
@@ -119,7 +119,11 @@ AC_CONFIG_FILES([
 	test/parser/template/Makefile
 	test/parser/typedef/Makefile
 	test/parser/connect/Makefile
+	dox/Makefile
+	dox/mk/Makefile
 	dox/lang/Makefile
+	dox/util/Makefile
+	dox/objfmt/Makefile
 	])
 
 AC_OUTPUT
