@@ -1,2 +1,4 @@
 html
 latex
+Makefile
+Makefile.in
