@@ -1,0 +1,9 @@
+# "dox/Makefile.am"
+
+AUTOMAKE_OPTIONS = 1.9
+
+SUBDIRS = mk lang util objfmt
+# don't actually go into the latex directory, generated by doxygen
+
+EXTRA_DIST =
+
