@@ -1,0 +1,10 @@
+# "dox/mk/Makefile.am"
+#	$Id: Makefile.am,v 1.1 2005/05/04 19:31:43 fang Exp $
+
+AUTOMAKE_OPTIONS = 1.9
+
+# no targets are really built in this directory
+# this directory just includes files common to other subdirectories of dox.
+
+EXTRA_DIST = maketexdepend.awk maketexdepend.tex Make.latex
+
