@@ -1,6 +1,6 @@
-% "artxx.tex"
+% "objfmt.tex"
 
-%	$Id: artxx.tex,v 1.11 2005/05/04 19:31:42 fang Exp $
+%	$Id: objfmt.tex,v 1.1 2005/05/04 19:31:44 fang Exp $
 
 \documentclass[12pt]{book}
 
@@ -49,61 +49,30 @@
 \newcommand{\ttt}[1]{\texttt{#1}}
 \newcommand{\tit}[1]{\textit{#1}}
 \newcommand{\tbf}[1]{\textbf{#1}}
-\newcommand\artxx{ART++}
-\newcommand\pint{\ttt{pint}}
-\newcommand\pbool{\ttt{pbool}}
-\renewcommand\int{\ttt{int}}		% don't expect to use integrals
-\newcommand\bool{\ttt{bool}}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % end of preamble
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{document}
 
-\title{The ART++ Language}
+\title{ART++ Object File Format}
 \author{David Fang}
 
 \ifpdf\pdfbookmark[0]{Title Page}{title}\fi
 \maketitle
-
-% trying to correct odd even margins...
-\begin{comment}
-\clearpage
-\centerline{This page is intentionally left blank.}
-\clearpage
-\centerline{So is this page}
-\clearpage
-\end{comment}
 
 \ifpdf\pdfbookmark[0]{Table of Contents}{toc}\fi
 \tableofcontents
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\input chapters/preface
-\input chapters/goals
-\input chapters/intro
-\input chapters/types
-\input chapters/expressions
-\input chapters/arrays
-\input chapters/processes
-\input chapters/channels
-\input chapters/datatypes
-\input chapters/namespaces
-\input chapters/templates
-% \input chapters/instances
-\input chapters/connections
-\input chapters/typedefs
-% \input chapters/control	% loops and conditionals
-\input chapters/linkage
-\input chapters/CHP
-\input chapters/PRS
+% \input chapters/...
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\ifpdf\pdfbookmark[0]{Bibliography}{bibliography}\fi
-\maketexdependadd{artxx.bib}
-\bibliography{artxx}
+% \ifpdf\pdfbookmark[0]{Bibliography}{bibliography}\fi
+% \maketexdependadd{objfmt.bib}
+% \bibliography{fangutil}
 
 \clearpage
 \ifpdf\pdfbookmark[0]{Index}{index}\fi
