@@ -1,0 +1,18 @@
+Makefile.in
+Makefile
+core.*
+*.core
+*.depend
+*.aux
+*.log
+*.bbl
+*.blg
+*.idx
+*.ind
+*.ilg
+*.out
+*.toc
+*.dvi
+*.ps
+*.pdf
+
