@@ -1,0 +1,10 @@
+% "chapters/persistent.tex"
+%	$Id: persistent.tex,v 1.1 2005/05/04 19:31:45 fang Exp $
+
+\chapter{Object Persistence Management}
+\label{sec:persistent}
+
+This chapter describes persistent object management, 
+the interface used to save data structures to file and read them back
+between program invocations, including dynamic object allocation.  
+
