@@ -1,0 +1,10 @@
+% "chapters/pointers.tex"
+%	$Id: pointers.tex,v 1.1 2005/05/04 19:31:45 fang Exp $
+
+\chapter{Pointer Classes}
+\label{sec:pointer}
+
+Pointer-traits.
+
+Simple and crude memory management.  
+
